exports[`test should render 1 start theme display 1`] = `
<div
  className="terra-ClinicalItemView terra-ClinicalItemView--oneColumn terra-ClinicalItemView-accessory--alignCenter">
  <div
    className="terra-ClinicalItemView-accessory" />
  <div
    className="terra-ClinicalItemView-body">
    <div
      className="terra-ClinicalItemView-rowContainer">
      <div
        className="terra-ClinicalItemView-row">
        <div
          className="terra-ClinicalItemView-content terra-ClinicalItemView-content--primarySize terra-ClinicalItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-ClinicalItemView-accessory" />
</div>
`;

exports[`test should render 2 start theme displays 1`] = `
<div
  className="terra-ClinicalItemView terra-ClinicalItemView--oneColumn terra-ClinicalItemView-accessory--alignCenter">
  <div
    className="terra-ClinicalItemView-accessory" />
  <div
    className="terra-ClinicalItemView-body">
    <div
      className="terra-ClinicalItemView-rowContainer">
      <div
        className="terra-ClinicalItemView-row">
        <div
          className="terra-ClinicalItemView-content terra-ClinicalItemView-content--primarySize terra-ClinicalItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="terra-ClinicalItemView-row">
        <div
          className="terra-ClinicalItemView-content terra-ClinicalItemView-content--secondarySize terra-ClinicalItemView-content--secondaryColor">
          <Display
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-ClinicalItemView-accessory" />
</div>
`;

exports[`test should render 3 start theme displays 1`] = `
<div
  className="terra-ClinicalItemView terra-ClinicalItemView--oneColumn terra-ClinicalItemView-accessory--alignCenter">
  <div
    className="terra-ClinicalItemView-accessory" />
  <div
    className="terra-ClinicalItemView-body">
    <div
      className="terra-ClinicalItemView-rowContainer">
      <div
        className="terra-ClinicalItemView-row">
        <div
          className="terra-ClinicalItemView-content terra-ClinicalItemView-content--primarySize terra-ClinicalItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="terra-ClinicalItemView-row">
        <div
          className="terra-ClinicalItemView-content terra-ClinicalItemView-content--secondarySize terra-ClinicalItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
      <div
        className="terra-ClinicalItemView-row">
        <div
          className="terra-ClinicalItemView-content terra-ClinicalItemView-content--secondarySize terra-ClinicalItemView-content--secondaryColor">
          <Display
            isTruncated={false}
            text="display 3" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-ClinicalItemView-accessory" />
</div>
`;

exports[`test should render a comment 1`] = `
<div
  className="terra-ClinicalItemView terra-ClinicalItemView--oneColumn terra-ClinicalItemView-accessory--alignCenter">
  <div
    className="terra-ClinicalItemView-accessory" />
  <div
    className="terra-ClinicalItemView-body">
    <Comment
      className=""
      isTruncated={false}
      text="comment"
      textStyle="attention" />
  </div>
  <div
    className="terra-ClinicalItemView-accessory" />
</div>
`;

exports[`test should render a default component 1`] = `
<div
  className="terra-ClinicalItemView terra-ClinicalItemView--oneColumn terra-ClinicalItemView-accessory--alignCenter">
  <div
    className="terra-ClinicalItemView-accessory" />
  <div
    className="terra-ClinicalItemView-body" />
  <div
    className="terra-ClinicalItemView-accessory" />
</div>
`;

exports[`test should render a end accessory 1`] = `
<div
  className="terra-ClinicalItemView terra-ClinicalItemView--oneColumn terra-ClinicalItemView-accessory--alignCenter">
  <div
    className="terra-ClinicalItemView-accessory" />
  <div
    className="terra-ClinicalItemView-body" />
  <div
    className="terra-ClinicalItemView-accessory">
    <img
      alt="Graphic" />
  </div>
</div>
`;

exports[`test should render a start accessory 1`] = `
<div
  className="terra-ClinicalItemView terra-ClinicalItemView--oneColumn terra-ClinicalItemView-accessory--alignCenter">
  <div
    className="terra-ClinicalItemView-accessory">
    <img
      alt="Graphic" />
  </div>
  <div
    className="terra-ClinicalItemView-body" />
  <div
    className="terra-ClinicalItemView-accessory" />
</div>
`;

exports[`test should render an accessory center aligned 1`] = `
<div
  className="terra-ClinicalItemView terra-ClinicalItemView--oneColumn terra-ClinicalItemView-accessory--alignCenter">
  <div
    className="terra-ClinicalItemView-accessory">
    <img
      alt="Graphic" />
  </div>
  <div
    className="terra-ClinicalItemView-body" />
  <div
    className="terra-ClinicalItemView-accessory" />
</div>
`;

exports[`test should render an accessory top aligned 1`] = `
<div
  className="terra-ClinicalItemView terra-ClinicalItemView--oneColumn terra-ClinicalItemView-accessory--alignTop">
  <div
    className="terra-ClinicalItemView-accessory">
    <img
      alt="Graphic" />
  </div>
  <div
    className="terra-ClinicalItemView-body" />
  <div
    className="terra-ClinicalItemView-accessory" />
</div>
`;

exports[`test should render one column 1`] = `
<div
  className="terra-ClinicalItemView terra-ClinicalItemView--oneColumn terra-ClinicalItemView-accessory--alignCenter">
  <div
    className="terra-ClinicalItemView-accessory" />
  <div
    className="terra-ClinicalItemView-body">
    <div
      className="terra-ClinicalItemView-rowContainer">
      <div
        className="terra-ClinicalItemView-row">
        <div
          className="terra-ClinicalItemView-content terra-ClinicalItemView-content--primarySize terra-ClinicalItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="terra-ClinicalItemView-row">
        <div
          className="terra-ClinicalItemView-content terra-ClinicalItemView-content--secondarySize terra-ClinicalItemView-content--secondaryColor">
          <Display
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-ClinicalItemView-accessory" />
</div>
`;

exports[`test should render truncated display 1`] = `
<div
  className="terra-ClinicalItemView terra-ClinicalItemView--oneColumn terra-ClinicalItemView-accessory--alignCenter">
  <div
    className="terra-ClinicalItemView-accessory" />
  <div
    className="terra-ClinicalItemView-body">
    <div
      className="terra-ClinicalItemView-rowContainer">
      <div
        className="terra-ClinicalItemView-row">
        <div
          className="terra-ClinicalItemView-content terra-ClinicalItemView-content--primarySize terra-ClinicalItemView-content--primaryColor">
          <Display
            isTruncated={true}
            text="display1display1display1display1display1display1display1display1" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-ClinicalItemView-accessory" />
</div>
`;

exports[`test should render two columns 1`] = `
<div
  className="terra-ClinicalItemView terra-ClinicalItemView--twoColumns terra-ClinicalItemView-accessory--alignCenter">
  <div
    className="terra-ClinicalItemView-accessory" />
  <div
    className="terra-ClinicalItemView-body">
    <div
      className="terra-ClinicalItemView-rowContainer">
      <div
        className="terra-ClinicalItemView-row">
        <div
          className="terra-ClinicalItemView-content terra-ClinicalItemView-content--primarySize terra-ClinicalItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 1" />
        </div>
        <div
          className="terra-ClinicalItemView-content terra-ClinicalItemView-content--primarySize terra-ClinicalItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-ClinicalItemView-accessory" />
</div>
`;

exports[`test should render with 1 display 1`] = `
<div
  className="terra-ClinicalItemView terra-ClinicalItemView--oneColumn terra-ClinicalItemView-accessory--alignCenter">
  <div
    className="terra-ClinicalItemView-accessory" />
  <div
    className="terra-ClinicalItemView-body">
    <div
      className="terra-ClinicalItemView-rowContainer">
      <div
        className="terra-ClinicalItemView-row">
        <div
          className="terra-ClinicalItemView-content terra-ClinicalItemView-content--primarySize terra-ClinicalItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-ClinicalItemView-accessory" />
</div>
`;

exports[`test should render with 2 displays 1`] = `
<div
  className="terra-ClinicalItemView terra-ClinicalItemView--oneColumn terra-ClinicalItemView-accessory--alignCenter">
  <div
    className="terra-ClinicalItemView-accessory" />
  <div
    className="terra-ClinicalItemView-body">
    <div
      className="terra-ClinicalItemView-rowContainer">
      <div
        className="terra-ClinicalItemView-row">
        <div
          className="terra-ClinicalItemView-content terra-ClinicalItemView-content--primarySize terra-ClinicalItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="terra-ClinicalItemView-row">
        <div
          className="terra-ClinicalItemView-content terra-ClinicalItemView-content--secondarySize terra-ClinicalItemView-content--secondaryColor">
          <Display
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-ClinicalItemView-accessory" />
</div>
`;

exports[`test should render with 3 displays 1`] = `
<div
  className="terra-ClinicalItemView terra-ClinicalItemView--oneColumn terra-ClinicalItemView-accessory--alignCenter">
  <div
    className="terra-ClinicalItemView-accessory" />
  <div
    className="terra-ClinicalItemView-body">
    <div
      className="terra-ClinicalItemView-rowContainer">
      <div
        className="terra-ClinicalItemView-row">
        <div
          className="terra-ClinicalItemView-content terra-ClinicalItemView-content--primarySize terra-ClinicalItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="terra-ClinicalItemView-row">
        <div
          className="terra-ClinicalItemView-content terra-ClinicalItemView-content--secondarySize terra-ClinicalItemView-content--primaryColor">
          <Display
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
      <div
        className="terra-ClinicalItemView-row">
        <div
          className="terra-ClinicalItemView-content terra-ClinicalItemView-content--secondarySize terra-ClinicalItemView-content--secondaryColor">
          <Display
            isTruncated={false}
            text="display 3" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-ClinicalItemView-accessory" />
</div>
`;

exports[`test should render with a display and graphic 1`] = `
<div
  className="terra-ClinicalItemView terra-ClinicalItemView--oneColumn terra-ClinicalItemView-accessory--alignCenter">
  <div
    className="terra-ClinicalItemView-accessory" />
  <div
    className="terra-ClinicalItemView-body">
    <div
      className="terra-ClinicalItemView-rowContainer">
      <div
        className="terra-ClinicalItemView-row">
        <div
          className="terra-ClinicalItemView-content terra-ClinicalItemView-content--primarySize terra-ClinicalItemView-content--primaryColor">
          <Display
            icon={
              <img
                alt="Graphic" />
            }
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-ClinicalItemView-accessory" />
</div>
`;
